loadbalancing/build/deploy/greetclient-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greetclient-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greetclient
  template:
    metadata:
      labels:
        app: greetclient
      annotations:
        inject.istio.io/templates: grpc-agent
        proxy.istio.io/config: '{"holdApplicationUntilProxyStarts": true}'
    spec:
      containers:
        - image: hiteshpattanayak/greet-client:20.0
          name: greetclient
          ports:
            - containerPort: 9091
