loadbalancing/build/deploy/greetclient-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: greetclient
  name: greetclient
  namespace: default
spec:
  containers:
    - image: hiteshpattanayak/greet-client:4.0
      name: greetclient
